objects/Other_Medications__c.object
<CustomObject>
    <description>Other Medications</description>
    <label>OtherMedication</label>
    <nameField>
        <displayFormat>OM-{0000000000}</displayFormat>
        <label>Other Medications Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OtherMedications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>DIN__c</fullName>
        <label>DIN #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug__c</fullName>
        <label>Drug</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>OtherMedications</relationshipLabel>
        <relationshipName>Other_Medications_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bedtime (qhs)</fullName>
                </value>
                <value>
                    <fullName>After meals</fullName>
                </value>
                <value>
                    <fullName>Before meals</fullName>
                </value>
                <value>
                    <fullName>Every other week</fullName>
                </value>
                <value>
                    <fullName>Twice a day (BID)</fullName>
                </value>
                <value>
                    <fullName>3 times a day (TID)</fullName>
                </value>
                <value>
                    <fullName>4 times a day (QID)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specify_Drug__c</fullName>
        <label>Specify Drug</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Medication__c</fullName>
        <label>Patient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Other_Medications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>